WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71347
Missing Force8BitConstructor in 8-bit version of StringImpl::reallocate()
https://bugs.webkit.org/show_bug.cgi?id=71347
Summary
Missing Force8BitConstructor in 8-bit version of StringImpl::reallocate()
Xianzhu Wang
Reported
2011-11-01 21:20:44 PDT
Sorry I made a mistake in patch of
bug 71210
: missed Force8BitConstructor in the in-place construction in the 8-bit version of StringImpl::reallocate().
Attachments
1-line patch
(1.33 KB, patch)
2011-11-01 21:23 PDT
,
Xianzhu Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Xianzhu Wang
Comment 1
2011-11-01 21:23:58 PDT
Created
attachment 113275
[details]
1-line patch
Geoffrey Garen
Comment 2
2011-11-02 09:31:39 PDT
Comment on
attachment 113275
[details]
1-line patch r=me
WebKit Review Bot
Comment 3
2011-11-02 09:46:02 PDT
Comment on
attachment 113275
[details]
1-line patch Clearing flags on attachment: 113275 Committed
r99072
: <
http://trac.webkit.org/changeset/99072
>
WebKit Review Bot
Comment 4
2011-11-02 09:46:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug