Missing Force8BitConstructor in 8-bit version of StringImpl::reallocate() https://bugs.webkit.org/show_bug.cgi?id=71347

Patch by Xianzhu Wang <wangxianzhu@chromium.org> on 2011-11-02
Reviewed by Geoffrey Garen.

* wtf/text/StringImpl.cpp:
(WTF::StringImpl::reallocate):

Canonical link: https://commits.webkit.org/87665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99072 268f45cc-cd09-0410-ab3c-d52691b4dbfc